--- a/src/app/main/navigation/navigation.component.html
+++ b/src/app/main/navigation/navigation.component.html
@@ -2,7 +2,7 @@
 
   <ul class="navbar-nav container">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">Articles</a>
+      <a class="nav-link" routerLink="/" routerLinkActive="active">Articles Start</a>
     </li>
   </ul>
 </nav>
