--- a/src/app/reddit/components/articles-list/articles-list.component.html
+++ b/src/app/reddit/components/articles-list/articles-list.component.html
@@ -1,3 +1,12 @@
-<p>
-  articles-list works!
-</p>
+<div class="list-group mt-2 mb-2">
+  <button *ngFor="let article of articles"
+          [routerLink]="['/articles/details', article.id]"
+          type="button"
+          class="list-group-item list-group-item-action d-flex justify-content-between">
+
+    <div><img class="mr-3" src="{{article.thumbnail || '/assets/avatar.jpg'}}" width="64px" alt="Avatar">
+      {{article.title}}
+    </div>
+    <span class="badge badge-primary badge-pill">{{article.commentsCount}}</span>
+  </button>
+</div>
