--- a/src/app/main/navigation/navigation.component.html
+++ b/src/app/main/navigation/navigation.component.html
@@ -1,8 +1,11 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
   <ul class="navbar-nav container">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/" routerLinkActive="active">Articles Start</a>
+    <li class="nav-item ">
+      <a class="nav-link float-left" routerLink="/articles/best" routerLinkActive="active">Top</a>
+      <a class="nav-link float-left" routerLink="/articles/all" routerLinkActive="active">All</a>
+      <a class="nav-link float-left" routerLink="/articles/rising" routerLinkActive="active">Rising</a>
+      <a class="nav-link float-left" routerLink="/articles/gifs" routerLinkActive="active">Gifs</a>
     </li>
   </ul>
 </nav>
