--- a/src/app/reddit/containers/articles/articles.component.html
+++ b/src/app/reddit/containers/articles/articles.component.html
@@ -1,3 +1,4 @@
 <app-articles-list [@slideAnimation]="animationTrigger" [articles]="articles.items"></app-articles-list>
 <app-pagination [next]="articles.nextPageId || ''"
-                [previous]="articles.previousPageId || ''"></app-pagination>
+                [previous]="articles.previousPageId || ''"
+                [category]="category"></app-pagination>
